# Search-Engine

./: CMakeLists.txt  DSAVLTree.h  DSAVLTreeNode.h  DSAVLTreeString.h  DSHashTable.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  Notepad.txt  QueryProcessor.cpp  QueryProcessor.h  README.md  ResearchDocument.cpp  ResearchDocument.h  main.cpp
html/: _d_s_a_v_l_tree_8h.html  _d_s_a_v_l_tree_8h__dep__incl.map  _d_s_a_v_l_tree_8h__dep__incl.md5  _d_s_a_v_l_tree_8h__incl.map  _d_s_a_v_l_tree_8h__incl.md5  _d_s_a_v_l_tree_8h_source.html  _d_s_a_v_l_tree_node_8h.html  _d_s_a_v_l_tree_node_8h__dep__incl.map  _d_s_a_v_l_tree_node_8h__dep__incl.md5  _d_s_a_v_l_tree_node_8h__incl.map  _d_s_a_v_l_tree_node_8h__incl.md5  _d_s_a_v_l_tree_node_8h_source.html  _d_s_a_v_l_tree_string_8h.html  _d_s_a_v_l_tree_string_8h__dep__incl.map  _d_s_a_v_l_tree_string_8h__dep__incl.md5  _d_s_a_v_l_tree_string_8h__incl.map  _d_s_a_v_l_tree_string_8h__incl.md5  _d_s_a_v_l_tree_string_8h_source.html  _d_s_hash_table_8h.html  _d_s_hash_table_8h__dep__incl.map  _d_s_hash_table_8h__dep__incl.md5  _d_s_hash_table_8h__incl.map  _d_s_hash_table_8h__incl.md5  _d_s_hash_table_8h_source.html  _document_parser_8cpp.html  _document_parser_8cpp__incl.map  _document_parser_8cpp__incl.md5  _document_parser_8cpp_source.html  _document_parser_8h.html  _document_parser_8h__dep__incl.map  _document_parser_8h__dep__incl.md5  _document_parser_8h__incl.map  _document_parser_8h__incl.md5  _document_parser_8h_source.html  _index_handler_8cpp.html  _index_handler_8cpp__incl.map  (+382 more)
